--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "license": "MIT",
     "dependencies": {
         "cec-controller": "^1.4.0",
-        "keypress": "^0.2.1"
+        "keypress": "^0.2.1",
+        "lirc-client": "^2.0.0"
     }
 }
