--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "license": "MIT",
     "dependencies": {
         "cec-controller": "^1.4.0",
-        "keypress": "^0.2.1",
+        "debounce": "^1.2.0",
         "lirc-client": "^2.0.0"
     }
 }
