Update LIRC conf
This is the exact file I was using. I'm not so certain this is Samsung-specific.

--- a/tv-for-xbox-cec.conf
+++ b/tv-for-xbox-cec.conf
@@ -6,10 +6,10 @@
 # Remote device model nr: N/A
 # Remote device info url: N/A
 # Type of device controlled: TV
-# Device(s) controlled by this remote: TVs identified as remote code T2051 by Xbox
+# Device(s) controlled by this remote: TVs identified as remote code T2051 by Xbox One (Samsung?)
 begin remote
 
-  name  SamsungQLED
+  name  tv-for-xbox-cec
   bits           16
   flags SPACE_ENC|CONST_LENGTH
   eps            30
@@ -26,9 +26,8 @@ begin remote
   frequency    38000
 
       begin codes
-          KEY_POWER                   0x9966 #On
-          KEY_POWER2                  0x19E6 #Off
+          KEY_POWER                   0x9966 # On
+          KEY_POWER2                  0x19E6 # Off
       end codes
 
 end remote
-
